# ti-am62x-evse-sdk

./: default.xml  readme.rst
conf/: bblayers.conf  layer.conf  local.conf
conf/machine/: phyboard-lyra-am62xx-k3r5.conf  phyboard-lyra-am62xx.conf
dynamic-layers/meta-ti/recipes-bsp/ti-sci-fw/: ti-sci-fw_git.bbappend
dynamic-layers/meta-ti/recipes-bsp/u-boot/: u-boot-ti_2021.01_08.03.00.005-phy1.bb
everest-module/: .gitignore  CMakeLists.txt  dependencies.yaml
everest-module/modules/: CMakeLists.txt
everest-module/modules/TiAM625SDK/: CMakeLists.txt  TiAM625SDK.cpp  TiAM625SDK.hpp  manifest.yaml  pb_codec
everest-module/modules/TiAM625SDK/board_support/: board_support_ACImpl.cpp  board_support_ACImpl.hpp  rpmsg_link.hpp
everest-module/modules/TiAM625SDK/rpmsg_dummy_lib/: CMakeLists.txt  rproc_id.h  ti_rpmsg_char.h
firmware/: .ccsproject  .cproject  .gitignore  .project  entry.cpp  linker.cmd  main.cpp  makefile_ccs_bootimage_gen  project.syscfg  upload.sh.tmpl
firmware/.launches/: ti_am62x_charger.launch
firmware/bsp_drivers/: charger_lock.hpp  control_pilot.cpp  control_pilot.hpp  power_switch.cpp  power_switch.hpp  rcd.hpp  rpmsg.cpp  rpmsg.hpp  sampler.cpp  sampler.hpp  task_config.h  timer_pwm_priv.h
firmware/lib/: iec61851_fsm.cpp  iec61851_fsm.hpp  iec61851_hal.hpp
firmware/pb_codec/: generate_nanopb.sh  high_to_low.pb.c  high_to_low.pb.h  high_to_low.proto  low_to_high.pb.c  low_to_high.pb.h  low_to_high.proto
firmware/targetConfigs/: AM62.ccxml
recipes-core/everest/: everest-ti-evse-config.bb  everest-ti-evse-modules.bb  nodered-flows-ti.bb
recipes-core/everest/everest-ti-evse-config/: am62-mcu-m4f0_0-fw  config-ti.yaml  everest.service
recipes-core/images/: ti-evse-image.bb
recipes-core/mosquitto/: mosquitto_%.bbappend
recipes-core/mosquitto/files/: mosquitto.conf
recipes-core/pionixbox/: pionixbox_git.bb
recipes-core/pionixbox/files/: display-app.service
recipes-core/psplash/: psplash_git.bbappend
recipes-core/wpa-config/: systemd-conf_%.bbappend  wpa-supplicant%.bbappend
recipes-core/wpa-config/files/: eth.network  wlan.network  wpa_supplicant-wlan0.conf
recipes-graphics/cairo/: cairo_%.bbappend
recipes-kernel/linux/: linux-ti_5.10.120-phy3.bb
recipes-kernel/linux/linux-ti/: 0001-Enable-framebuffer-rotation.patch  0002-Add-cpu-spi0-muxing-and-qca7k.patch  0003-Set-mcu_spi-to-reserved-in-device-tree.patch
(+1 files in other folders)
